--- a/DiabetesPrediction/App/app/src/main/AndroidManifest.xml
+++ b/DiabetesPrediction/App/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.diabetesprediction">
 
     <application
@@ -9,19 +10,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BMIcalculator"></activity>
-        <activity android:name=".Infodisplay" />
-        <activity
-            android:name=".Resultdisplay"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".Homepage">
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Signup"></activity>
+        <activity android:name=".ProActivity" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".login" />
+        <activity android:name=".Homepage" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".BMIcalculator" />
+        <activity android:name=".Infodisplay" />
+        <activity
+            android:name=".Resultdisplay"/>
+        <!-- android:parentActivityName=".MainActivity" -->
     </application>
 
 </manifest>
